--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -27,7 +27,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,1920x1080@144,0x0,1
-monitor=HDMI-A-1,1920x1080@60,auto,1
+monitor=HDMI-A-1,1920x1080@180,auto,1
 
 
 ###################
@@ -39,7 +39,8 @@ monitor=HDMI-A-1,1920x1080@60,auto,1
 # Set programs that you use
 $terminal = kitty
 $fileManager = nemo
-$menu = tofi-drun -c ~/.config/tofi/configA --drun-launch=true
+#$menu = tofi-drun -c ~/.config/tofi/configA --drun-launch=true
+$menu = rofi -show drun  
 $browser = brave
 $notes = obsidian
 $editor = code
@@ -65,7 +66,11 @@ exec-once = wl-paste --type text --watch cliphist store # clipboard
 exec-once = wl-paste --type image --watch cliphist store
 #exec-once = rm "$HOME/.cache/cliphist/db"   #it'll delete history at every restart    
 exec-once = hypridle
-exec-once = hyprlock
+#exec-once = hyprlock
+exec-once = hyprctl setcursor Bibata-Modern-Ice 24
+exec-once = ~/.config/hypr/scripts/battery_notify.sh &
+
+
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # exec-once = $terminal
@@ -124,10 +129,16 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    #col.active_border = rgb(8aadf4) rgb(24273A) rgb(24273A) rgb(8aadf4) 45deg
+	col.active_border = rgb(000000)
+   	col.inactive_border= rgb(000000)
+
+#col.active_border = rgb(ff073a) rgb(ff3131) rgb(ff073a) rgb(ff3131) 45deg
+
+#col.active_border = rgb(ff073a) rgb(ff3131) rgb(ff073a) rgb(ff3131) 45deg
+
     
-#    col.active_border = rgb(8a2be2) rgb(800080) rgb(9932cc) rgb(ba55d3) 45deg
-#    col.inactive_border = rgb(24273A) rgb(24273A) rgb(24273A) rgb(27273A) 45deg
+  # col.active_border = rgb(8a2be2) rgb(800080) rgb(9932cc) rgb(ba55d3) 45deg
+  #  col.inactive_border = rgb(24273A) rgb(24273A) rgb(24273A) rgb(27273A) 45deg
     
     
 # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -141,7 +152,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 20
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -149,18 +160,17 @@ decoration {
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
-        enabled = true
+        enabled = false
         size = 3
         passes = 3
         new_optimizations = true
         vibrancy = 0.1696
-        ignore_opacity = true
+        ignore_opacity = false
     }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = true
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -260,9 +270,12 @@ bind = $mainMod, M, exit,
 bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, W, togglefloating,
 bind = $mainMod, A, exec, $menu
-bind = $mainMod, Print, exec, grimblast --notify copy area
+bind = $mainMod, P, exec, grimblast --notify copy area
 bind = $mainMod, F5, exec, ~/.config/scripts/cambiar_wallpapers.sh
 #bind = $mainMod, X, exec, ~/.local/bin/wal-cycle.sh
+bind = $mainMod, F2, exec, brightnessctl -d asus::kbd_backlight set 1-
+bind = $mainMod, F3, exec, brightnessctl -d asus::kbd_backlight set +1
+bind = $mainMod, SPACE, exec, ~/scripts/toggle-layout.sh
 
 
 # bind = $mainMod, P, pseudo, # dwindle
@@ -374,13 +387,13 @@ windowrule = float, class:^(jome)$
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 windowrulev2 = opacity 0.90 0.90,class:^(Thorium-browser)$
-windowrulev2 = opacity 0.80 0.80,class:^(Code)$
+#windowrulev2 = opacity 0.90 0.90,class:^(Code|code-oss)$
 windowrulev2 = opacity 0.80 0.80,class:^(Arduino IDE)$
 windowrulev2 = opacity 0.80 0.80,class:^(dev.warp.Warp)$
-windowrulev2 = opacity 0.80 0.80,class:^(obsidian)$
+#windowrulev2 = opacity 0.80 0.80,class:^(obsidian)$
 windowrulev2 = opacity 0.80 0.80,class:^(code-url-handler)$
 windowrulev2 = opacity 0.80 0.80,class:^(code-insiders-url-handler)$
-windowrulev2 = opacity 0.80 0.80,class:^(kitty)$
+#windowrulev2 = opacity 0.80 0.80,class:^(kitty)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.gnome.Nautilus)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.ark)$
 windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
