--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,14 +1,9 @@
-font_family JetBrains Mono
-bold_font JetBrains Mono Bold
-italic_font JetBrains Mono Italic
-bold_italic_font JetBrains Mono Bold Italic
-font_size 12
-window_decorations none
-#shell zsh
-include colors.conf
-window_padding_width 8
-#background_opacity 0.0
-hide_window_decorations yes 
+font_family JetBrainsMono Nerd Font
+font_size 10.0
+#include dark-theme.auto.conf
+shell /bin/zsh
+include ~/.cache/wal/colors-kitty.conf
+background_opacity 1.95
 confirm_os_window_close 0
-
-
+# Márgenes alrededor del área de texto
+window_padding_width 20
