--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,175 +1,123 @@
-general{
-	hide_cursor = true
-	ignore_empty_input = true
+source = colors.conf
+$Scripts = $HOME/.config/hypr/scripts
+
+general {
+    hide_cursor = true
+	ignore_empty_input = true    
 }
 
-background{
-	path = $HOME/Descargas/purple.png
-	blur_size=5
+background {
+    monitor =
+    # NOTE: use only 1 path
+	#path = screenshot   # screenshot of your desktop
+	#path = $HOME/.config/hypr/wallpaper_effects/.wallpaper_modified # by wallpaper effects
+    path = $HOME/Documentos/Wallpapers/purple.png 
+    blur_size=5
 	brightness = 0.7
 	blur_passes=1
-    reload_time = 10
-
 }
 
 
-input-field{
-	size = 200,50
-	outline_thickness = 3
-	dots_size = 0.33
-	dots_spacing = 0.15
+# Hours
+label {
+    monitor =
+    text = cmd[update:1000] echo "<b><big> $(date +"%H") </big></b>"
+    color = $on_secondary_container
+    font_size = 112
+    font_family = Adwaita Sans
+    shadow_passes = 0
+    shadow_size = 0
+
+    position = 0, 220
+    halign = center
+    valign = center
+}
+
+# Minutes
+label {
+    monitor =
+    text = cmd[update:1000] echo "<b><big> $(date +"%M") </big></b>"
+    color = $on_secondary_container
+    font_size = 112
+    font_family = Adwaita Sans
+    shadow_passes = 0
+    shadow_size = 0
+
+    position = 0, 80
+    halign = center
+    valign = center
+}
+
+# Today
+label {
+    monitor =
+    text = cmd[update:18000000] echo "<b><big> "$(date +'%A')" </big></b>"
+    color = $secondary
+    font_size = 18
+    font_family = JetBrainsMono NFM
+
+    position = 0, -15
+    halign = center
+    valign = center
+}
+
+# Week
+label {
+    monitor =
+    text = cmd[update:18000000] echo "<b> "$(date +'%d %b')" </b>"
+    color = $secondary
+    font_size = 14
+    font_family = JetBrainsMono Nerd Font 10
+
+    position = 0, -40
+    halign = center
+    valign = center
+}
+
+# Degrees
+#label {
+    monitor =
+    text = cmd[update:18000000] echo "<b>Feels like<big> $(curl -s 'wttr.in?format=%t' | tr -d '+') </big></b>"
+    color = $color8
+    font_size = 14
+    font_family = JetBrainsMono NFM
+
+    position = 0, 40
+    halign = center
+    valign = bottom
+}
+
+# USER
+#label {
+    monitor =
+    text = $USER
+    color = $color8
+    font_size = 14
+    font_family = JetBrainsMono NFM Bold
+    position = 0, 200
+    halign = center
+    valign = bottom
+}
+
+input-field {
+    monitor =
+    size = 250, 50
+    outline_thickness = 3
+
+    dots_size = 0.26 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.64 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
-	dots_rounding = -1
-	outer_color = rgb(15,15,15)
-	inner_color = rgba(200,200,200,0.7)
-	font_color = rgb(10,10,10)
-	font_family = Monocraft Nerd Font
-	fade_on_empty = false
-	fade_timeout = 1000
-	placeholder_text = <i>Password</i>
-	hide_input = false
-	rounding = -1
-	check_color = rgb(204,136,34)
-	fail_color = rgb(204,34,34)
-	fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
-	capslock_color = -1
-	bothlock_color = -1
-	invert_numlock = false
-	swap_font_color = false
-	position = 0,-100
-	halign = center
- 	valign = center 
-}
+    dots_rouding = -1
 
-label{
-    text = cmd[update:50] cat  ~/.config/hypr/scripts/text_animation/scripttext
+    rounding = 22
+    outer_color = $source_color
+    inner_color = rgba(255, 255, 255, 0.1)
+    font_color = $secondary
+    fade_on_empty = true
+    placeholder_text = <i>Password...</i> # Text rendered in the input box when it's empty.
+    font_color = rgba(227, 227, 227, 1)
+    check_color = rgba(140, 22, 173, 1)
+    position = 0, 120
     halign = center
-    valign = center
-    position = 6,344
-    color = rgba(0, 0, 0,1.0)
-    font_size = 50
-    font_family = Monocraft Nerd Font
-}
-
-label{
-    text = cmd[update:50] cat ~/.config/hypr/scripts/text_animation/scripttext
-    halign = center
-    valign = center
-    position = 3,347
-    color = rgba(69, 118, 255,1.0)
-    font_size = 50
-    font_family = Monocraft Nerd Font
-}
-
-label{
-    text = cmd[update:50] cat ~/.config/hypr/scripts/text_animation/scripttext
-    halign = center
-    valign = center
-    position = 0,350
-    color = rgba(220, 220, 220,1.0)
-    font_size = 50
-    font_family = Monocraft Nerd Font
-}
-
-label{
-	text = cmd[update:1000] cat ~/.config/hypr/scripts/weather/weathertext
-	color = rgba(240, 151, 175, 1) 
-	font_size = 10
-    font_family = Monocraft Nerd Font
-    position = 65, 42
-    halign = left
     valign = bottom
 }
-
-shape{
-    color=rgba(255, 51, 105,1.0)
-    rounding=1
-    halign=left
-	valign=bottom
-    position = 55,40
-    size=5,20
-}
-
-shape{
-    color=rgba(0,0,0,0.4)
-    rounding=8
-    halign=left
-    valign=bottom
-    position = 55,35
-    size=321,30  //change size dynamically
-}
-
-label{
-	text = cmd[update:1000] echo "$TIME12"
-	color = rgba(200,200,200,1.0)
-	font_size = 55
-	font_family = Monocraft Nerd Font
-	position = -50,110
-	halign = right
-	valign = bottom
-	shadow_passes = 5
-	shadow_size = 10
-}
-
-label{
-    text = cmd[update:60] date +"%A, %B %d, %Y"
-	color = rgba(200,200,200,1.0)
-	font_size = 25
-	font_family = Monocraft Nerd Font
-	position = -50,40
-	halign = right
-	valign = bottom
-	shadow_passes = 5
-	shadow_size = 10
-}
-
-image{
-    path = /var/lib/AccountsService/icons/$USER
-    size = 185
-    border_size = 7
-    border_color = rgba(21,21,21,0.6)
-    halign = center
-    valign = center
-    position = 0,100
-}
-
-label{
-	text = $USER
-	color = rgba(200,200,200,1.0)
-    font_size = 20
-    font_family = Monocraft Nerd Font
-    position = 0,-40
-    halign = center
-    valign = center
-    shadow_passes = 5
-    shadow_size = 10
-}
-
-shape{
-    color=rgba(252, 186, 3,1)
-    rounding=1
-    halign=left
-    valign=bottom
-    position = 385,41
-	size=5,20
-}
-
-label{
-    text = cmd[update:1000] echo -e "$(~/.config/hypr/scripts/battery.sh)"
-    color = rgba(247,225,161,1.0)
-    font_size = 10
-    font_family = Monocraft Nerd Font
-    position = 397,40
-    halign = left
-    valign = bottom
-}
-
-shape{
-    color=rgba(0,0,0,0.4)
-    rounding=8
-    halign=left
-    valign=bottom
-    position = 385,35
-    size=70,30
-}
-   
