--- a/.config/kitty/dark-theme.auto.conf
+++ b/.config/kitty/dark-theme.auto.conf
@@ -1,46 +1,95 @@
-## name: Hachiko 
-## author: Mert18 
+# vim:ft=kitty
 
-# Cursor colors
-cursor                          #FF7979
-cursor_text_color               #111111
+## name: Base2Tone Drawbridge Dark
+## author: Bram de Haan (https://github.com/atelierbram)
+## license: MIT
+## upstream: https://github.com/atelierbram/Base2Tone-kitty/blob/main/themes/base2tone-drawbridge-dark.conf
+## blurb: Duotone theme | bright blue - bright turquoise
 
-# Color Schemes
-active_tab_foreground   #FFFAFA
-active_tab_background   #B1003C
-active_tab_font_style   bold
-inactive_tab_foreground #B1003C
-inactive_tab_background #FFFAFA
-tab_bar_margin_color            none
 
-mark1_foreground #FFFAFA
-mark1_background #870300
+#: The basic colors
 
-active_border_color             #FFFAFA
-inactive_border_color           #870300
-bell_border_color               #870300
-visual_bell_color               none
+foreground #9094a7
+background #000000
+selection_foreground #9094a7
+selection_background #252a41
 
-selection_foreground #FFFAFA
-selection_background #870300
 
-url_color #FF7979
+#: Cursor colors
 
-color0 #181818
-color8 #333333
-color1 #960042
-color9 #870300
-color2  #FF0000
-color10 #690000
-color3  #FF5D05
-color11 #6F2700
-color4  #FF2044
-color5  #FFEDCF
-color12 #333333
-color13 #FFFFB5
-color6  #6F0027
-color14 #F50056
-color7  #FFDAF1
-color15 #FFE6DA
-#white
+cursor #289dbd
+cursor_text_color #1b1f32
 
+
+#: URL underline color when hovering with mouse
+
+url_color #c3cdfe
+
+
+#: kitty window border colors and terminal bell colors
+
+active_border_color #444b6f
+inactive_border_color #1b1f32
+bell_border_color #4961da
+visual_bell_color none
+
+
+#: OS Window titlebar colors
+
+wayland_titlebar_color #252a41
+macos_titlebar_color #252a41
+
+
+#: Tab bar colors
+
+active_tab_foreground #f9fbfb
+active_tab_background #1b1f32
+inactive_tab_foreground #a6aeb0
+inactive_tab_background #252a41
+tab_bar_background #252a41
+tab_bar_margin_color none
+
+
+#: Colors for marks (marked text in the terminal)
+
+mark1_foreground #1b1f32
+mark1_background #516aec
+mark2_foreground #1b1f32
+mark2_background #818b8d
+mark3_foreground #1b1f32
+mark3_background #33abcc
+
+
+#: The basic 16 colors
+
+#: black
+color0 #1b1f32
+color8 #51587b
+
+#: red
+color1 #627af4
+color9 #75d5f0
+
+#: green
+color2 #67c9e4
+color10 #252a41
+
+#: yellow
+color3 #99e9ff
+color11 #444b6f
+
+#: blue
+color4 #7289fd
+color12 #5e6587
+
+#: magenta
+color5 #67c9e4
+color13 #c3cdfe
+
+#: cyan
+color6 #8b9efd
+color14 #5cbcd6
+
+#: white
+color7 #9094a7
+color15 #e1e6ff
