--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -38,24 +38,24 @@
         "spacing": 10
     },
 
-    "clock": {
-        "format": "{:%A    %B-%d-%Y    %I:%M:%S %p}",
-        "interval": 1,
-        "rotate": 0,
-        "tooltip-format": "<tt>{calendar}</tt>",
-        "calendar": {
-            "mode": "month",
-            "mode-mon-col": 3,
-            "on-scroll": 1,
-            "on-click-right": "mode",
-            "format": {
-                "months": "<span color='#a6adc8'><b>{}</b></span>",
-                "weekdays": "<span color='#a6adc8'><b>{}</b></span>",
-                "today": "<span color='#a6adc8'><b>{}</b></span>",
-                "days": "<span color='#555869'><b>{}</b></span>"
-            }
+"clock": {
+    "format": "{:%d-%m-%Y %H:%M}",
+    "interval": 60,
+    "rotate": 0,
+    "tooltip-format": "<tt>{calendar}</tt>",
+    "calendar": {
+        "mode": "month",
+        "mode-mon-col": 3,
+        "on-scroll": 1,
+        "on-click-right": "mode",
+        "format": {
+            "months": "<span color='#a6adc8'><b>{}</b></span>",
+            "weekdays": "<span color='#a6adc8'><b>{}</b></span>",
+            "today": "<span color='#a6adc8'><b>{}</b></span>",
+            "days": "<span color='#555869'><b>{}</b></span>"
         }
-    },
+    }
+},
 
     "backlight": {
         "device": "intel_backlight",
