--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -1,8 +1,8 @@
 [Settings]
 language = en
-folder = ~/Imágenes/wallpapers
+folder = ~/Documentos/Wallpapers
 monitors = All
-wallpaper = ~/Imágenes/wallpapers/1360883.jpeg
+wallpaper = ~/Documentos/Wallpapers/purple.png
 show_path_in_tooltip = True
 backend = hyprpaper
 fill = fill
@@ -16,11 +16,12 @@ zen_mode = False
 post_command = 
 number_of_columns = 3
 swww_transition_type = any
-swww_transition_step = 90
+swww_transition_step = 63
 swww_transition_angle = 0
 swww_transition_duration = 2
 swww_transition_fps = 60
 mpvpaper_sound = False
 mpvpaper_options = 
 use_xdg_state = False
+stylesheet = /home/radec/.config/waypaper/style.css
 
